fixes cart control styling on safari

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -6,6 +6,7 @@
   background: none;
   border: none;
   padding: 0;
+  margin: 0;
 
   &:enabled {
     cursor: pointer;
