--- a/src/components/CartControl.scss
+++ b/src/components/CartControl.scss
@@ -1,11 +1,12 @@
 .CartControl {
   display: flex;
   flex-direction: row;
-  // flex-flow: row nowrap;
 
   label {
     flex: 1;
     width: 100%;
+    display: flex;
+    position: relative;
   }
 
   input {
@@ -19,6 +20,7 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+    position: absolute;
   }
 
   .decrease-icon,
